--- a/substitutions/html/config.html
+++ b/substitutions/html/config.html
@@ -4,11 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Configuration page for the xkcd substitution chrome extension.">
-    <title>XKCD Substitutions Configuration</title>
+    <meta name="description" content="Configuration page for the Prince substitution chrome extension.">
+    <title>Prince Substitutions Configuration</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="../css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="../css/substitutions.css">
     <link rel="shortcut icon" type="image/png" href="../images/enabled.png">
     <script src="../js/background.js" type="text/javascript"></script>
@@ -19,7 +18,7 @@
 <body class="col-xs-10 col-xs-offset-1">
     <div class="heading">
         <div class="title">
-            <h1>XKCD Substitutions</h1>
+            <h1>Prince Substitutions</h1>
         </div>
         <ul class="nav nav-pills nav-justified">
             <li>
